--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -15,11 +15,11 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Introduction
-
-```{r, echo = FALSE}
+```{r, include = FALSE}
 library(jfa)
 ```
+
+## Introduction
 
 Welcome to the 'Data auditing' vignette of the **jfa** package. Here you can find a simple explanation of the functions in the package that facilitate data auditing. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
 
