--- a/vignettes/digit-analysis.Rmd
+++ b/vignettes/digit-analysis.Rmd
@@ -15,11 +15,11 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Introduction
-
-```{r, echo = F}
+```{r, include = FALSE}
 library(jfa)
 ```
+
+## Introduction
 
 Welcome to the 'Digit analysis' vignette of the **jfa** package. In this vignette you are able to find detailed examples of how you can incorporate the `digit_test()` and `repeated_test()` functions provided by the package.
 
