--- a/vignettes/sample-planning.Rmd
+++ b/vignettes/sample-planning.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Planning statistical audit samples using the jfa package'
+title: 'Planning statistical audit samples'
 author: Koen Derks
 date: "`r Sys.Date()`"
 output: 
@@ -15,18 +15,13 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-## Introduction
-
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.height = 4, fig.width = 6)
+```{r, include = FALSE}
 library(jfa)
 ```
 
-<center>
+## Introduction
 
-![Figure 1: The location of the planning stage in the audit sampling workflow](img/planning.png)\
-
-</center>
+<p align='center'><img src='https://github.com/koenderks/jfa/raw/development/vignettes/img/planning.png' alt='planning' width='100%'></p>
 
 The objective of the planning stage in an audit is to determine a minimum sample size. This vignette shows how to use the `planning()` function to achieve this.
 
