--- a/vignettes/audit-sampling.Rmd
+++ b/vignettes/audit-sampling.Rmd
@@ -53,11 +53,21 @@ The `auditPrior()` function is used to specify a prior distribution for Bayesian
 auditPrior(method = c(
              "default", "strict", "param", "impartial", "hyp",
              "arm", "bram", "sample", "factor"
-           ), likelihood = c("poisson", "binomial", "hypergeometric"),
-           N.units = NULL, alpha = NULL, beta = NULL,
-           materiality = NULL, expected = 0, ir = NULL, cr = NULL,
-           ub = NULL, p.hmin = NULL, x = NULL, n = NULL,
-           factor = NULL, conf.level = 0.95)
+           ),
+           likelihood = c("poisson", "binomial", "hypergeometric"),
+           N.units = NULL,
+           alpha = NULL,
+           beta = NULL,
+           materiality = NULL,
+           expected = 0,
+           ir = NULL,
+           cr = NULL,
+           ub = NULL,
+           p.hmin = NULL,
+           x = NULL,
+           n = NULL,
+           factor = NULL,
+           conf.level = 0.95)
 ```
 
 *Supported options for the `method` argument:*
@@ -103,9 +113,14 @@ The `planning()` function is used to calculate a minimum sample size for audit s
 *Full function with default arguments:*
 
 ```r
-planning(materiality = NULL, min.precision = NULL, expected = 0,
-         likelihood = c('poisson', 'binomial', 'hypergeometric'), 
-         conf.level = 0.95, N.units = NULL, by = 1, max = 5000, 
+planning(materiality = NULL,
+         min.precision = NULL,
+         expected = 0,
+         likelihood = c("poisson", "binomial", "hypergeometric"),
+         conf.level = 0.95,
+         N.units = NULL,
+         by = 1,
+         max = 5000,
          prior = FALSE)
 ```
 
@@ -142,10 +157,16 @@ The `selection()` function is used to perform statistical selection of audit sam
 *Full function with default arguments:*
 
 ```r
-selection(data, size, units = c('items', 'values'),
-          method = c('interval', 'cell', 'random', 'sieve'), values = NULL,
-          order = NULL, decreasing = FALSE, randomize = FALSE,
-          replace = FALSE, start = 1)
+selection(data,
+          size,
+          units = c("items", "values"),
+          method = c("interval", "cell", "random", "sieve"),
+          values = NULL,
+          order = NULL,
+          decreasing = FALSE,
+          randomize = FALSE,
+          replace = FALSE,
+          start = 1)
 ```
 
 *Supported options for the `units` argument:*
@@ -184,14 +205,24 @@ The `evaluation()` function takes a sample or summary statistics of the sample a
 *Full function with default arguments:*
 
 ```r
-evaluation(materiality = NULL, min.precision = NULL, method = c(
+evaluation(materiality = NULL, 
+           method = c(
              "poisson", "binomial", "hypergeometric",
              "stringer", "stringer.meikle", "stringer.lta", "stringer.pvz",
              "rohrbach", "moment", "coxsnell",
              "direct", "difference", "quotient", "regression", "mpu"
-           ), alternative = c("less", "two.sided", "greater"), conf.level = 0.95,
-           data = NULL, values = NULL, values.audit = NULL, strata = NULL, times = NULL,
-           x = NULL, n = NULL, N.units = NULL, N.items = NULL,
+           ),
+           alternative = c("less", "two.sided", "greater"),
+           conf.level = 0.95,
+           data = NULL,
+           values = NULL,
+           values.audit = NULL,
+           strata = NULL,
+           times = NULL,
+           x = NULL,
+           n = NULL,
+           N.units = NULL,
+           N.items = NULL,
            pooling = c("none", "complete", "partial"), 
            prior = FALSE)
 ```
@@ -241,7 +272,9 @@ The `report()` function takes an object of class `jfaEvaluation` as returned by 
 *Full function with default arguments:*
 
 ```r
-report(object, file = 'report.html', format = c('html_document', 'pdf_document'))
+report(object,
+       file = "report.html",
+       format = c("html_document", "pdf_document"))
 ```
 
 *Example usage:*
